# RustyChat

./: Cargo.toml  Readme.org  config.toml
src/: app.rs  config.rs  cursor.rs  event.rs  main.rs  stream.rs  textstyle.rs  tui.rs
