[package]
name = "RustyChat"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.27"
tokio = { version = "1.37", features = ["full"] }
whoami = "1.6.0"
strum = "0.27.1"
strum_macros = "0.27.1"
unicode-width = "0.2.0"
regex = "1.11.1"
textwrap = "0.16.2"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
dirs-next = "2.0.0"
itertools = "0.14.0"
unicode-segmentation = "1.12.0"
